plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.handfair'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
}

repositories {
	mavenCentral()
}


task copyAppJar(type:Copy){
	dependsOn bootJar
	from bootJar.archiveFile.get().asFile
	rename {String filename -> return "vernissage.jar"}
	into "${rootProject.buildDir}/output-docker"
}

dependencies {
	implementation 'junit:junit:4.13.1'
	implementation 'com.google.code.gson:gson'
	compileOnly 'org.jetbrains:annotations:23.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'org.flywaydb:flyway-core'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-test'
//	implementation 'org.springframework.kafka:spring-kafka'
	testImplementation 'org.assertj:assertj-core:3.23.1'
	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
	implementation "org.testcontainers:testcontainers:1.18.3"
	implementation "org.testcontainers:junit-jupiter:1.18.3"
	implementation "org.testcontainers:postgresql:1.18.3"

}

tasks.named('test') {
	useJUnitPlatform()
}
